[project]
name = "prepack"
description = "A small, practical bundle of ComfyUI nodes that streamlines common workflows."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-Prepack Custom Node Requirements", "# Essential dependencies for workflow optimization and control", "# Core dependencies (usually available in ComfyUI)", "torch>=1.13.0", "numpy>=1.21.0", "Pillow>=8.0.0", "# Optional dependencies for SaveByFileName node", "# For video saving functionality", "# opencv-python>=4.5.0", "# All other nodes use built-in ComfyUI functionality"]

[project.urls]
Repository = "https://github.com/S4MUEL-404/ComfyUI-Prepack"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/S4MUEL-404/ComfyUI-Prepack/wiki"
"Bug Tracker" = "https://github.com/S4MUEL-404/ComfyUI-Prepack/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Prepack"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

